--- a/src/app/alimentos/alimentos.component.scss
+++ b/src/app/alimentos/alimentos.component.scss
@@ -8,6 +8,10 @@ img {
   font-size: 22px;
 }
 
+h6{
+font-family:  Helvetica;  font-size: 12px;
+text-transform: lowercase;
+}
 
 .btn1 {
   color: #ffffff;
