--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -58,9 +58,9 @@
               <div class="row">
                 <div class="col-md-6">
                   <mat-form-field class="example-full-width">
-                    <input matInput placeholder="Usuario" type="text" formControlName="usuario">
+                    <input matInput placeholder="Cedula" type="text" formControlName="usuario" >
                     <div *ngIf="personaForm.get('usuario').invalid && (personaForm.get('usuario').touched || submitted)"
-                      class="error-message">El usuario es requerido y debe tener al menos 3 caracteres.</div>
+                      class="error-message">El usuario es requerido y debe tener al menos 10 caracteres.</div>
                   </mat-form-field>
                 </div>
                 <div class="col-md-6">
